# ezio-cmake

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: EZIOConfig.cmake.in
ezio/: CMakeLists.txt
ezio/cmake/: EZIOConfig.cmake.in
ezio/include/ezio/: buffer.h
ezio/src/ezio/: buffer.cpp
kbase/: CMakeLists.txt
kbase/cmake/: KBaseConfig.cmake.in
kbase/src/: CMakeLists.txt
src/: CMakeLists.txt
src/ezio/: endian_utils.h
test/: CMakeLists.txt
